# task5-ros2-idkkrishnamaybe

./: .gitignore  2.txt  README.md
fleet_ws/: Dockerfile  run.sh
fleet_ws/src/drone_fleet/: CMakeLists.txt
fleet_ws/src/drone_fleet/include/drone_fleet/: vehicle.hpp
fleet_ws/src/drone_fleet/launch/: fleet.launch.py
fleet_ws/src/drone_fleet/src/: drone_node.cpp  fleet_manager.cpp  mission_drone.cpp  vehicle.cpp
part1/: CMakeLists.txt
part1/include/: autonomous_drone.hpp  drone.hpp  vehicle.hpp
part1/src/: drone.cpp  main.cpp  mission_drone.cpp  vehicle.cpp
task5/: .gitignore
task5/fleet_ws/: Dockerfile
task5/fleet_ws/src/drone_fleet/: package.xml
task5/fleet_ws/src/drone_fleet/src/: drone.cpp  health_monitor.cpp
task5/part1/: CMakeLists.txt  autonomous_drone.cpp  exceptions.hpp  main.cpp  mission_drone.hpp
